0.4.7 (??/?/2012):
------------------

- Added new "space_after_boot_options" token to refind.conf.

0.4.6 (10/6/2012):
------------------

- Fixed some minor memory management issues.

- Added new "scan_delay" feature to impose a delay before scanning
  for disks.

- Changed default "scanfor" option from internal-external-optical to either
  internal-external-optical-manual (for non-Macs) or
  internal-hdbios-external-biosexternal-optical-cd-manual (for Macs). I've
  done this for two reasons:
  - Many Mac users have been confused by the fact that rEFInd needs
    reconfiguration to detect Windows (or Linux installed in BIOS mode),
    since rEFIt scans BIOS devices by default. Adding the BIOS options as
    default for them should help them.
  - Adding the "manual" option enables users to simply add manual boot
    stanzas and have them work, which is more intuitive. Adding the
    "manual" option will have no effect unless manual stanzas are created
    or uncommented, so this part of the change won't affect users' working
    default configurations.

- Added new legacy (BIOS) boot support for UEFI-based PCs.

0.4.5 (8/12/2012):
------------------

- Fixed bug that caused a failure to boot BIOS-based OSes on Macs.

- Fixed bug in install.sh that caused it to fail to detect rEFItBlesser.

0.4.4 (6/23/2012):
------------------

- Fixed bug that caused filesystem labels to be corrupted by rEFInd on
  32-bit systems.

- Fixed bug that caused filesystem labels to be truncated in the drivers
  on 32-bit systems.

- Fixed bug in use_graphics_for option parsing that caused most options
  to set graphics mode for OS X and/or Linux but not other boot
  loaders/OSes.

- Tweaked install script to better isolate the ESP under OS X.

0.4.3 (6/21/2012):
------------------

- rEFInd now supports compilation using the TianoCore UDK2010/EDK2
  development kit in addition to GNU-EFI.

- Added new "use_graphics_for" option to control which OSes to boot in