@@ -200,7 +200,6 @@ typedef struct {
 typedef struct {
    BOOLEAN     TextOnly;
    BOOLEAN     ScanAllLinux;
-   BOOLEAN     SpaceAfterBootOptions;
    UINTN       RequestedScreenWidth;
    UINTN       RequestedScreenHeight;
    UINTN       Timeout;
